
[tool.poetry]
name = "orbitalcopilot"
version = "0.1.0"
description = "Orbital's AI assistant for Real Estate lawyers. Users can ask Orbital Copilot questions about a range of legal documents such as leases."
authors = ["priyanshu-sekhar <pri.patra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.7.4"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
